--- a/Application/Share&Ride/app/src/main/res/layout/activity_login.xml
+++ b/Application/Share&Ride/app/src/main/res/layout/activity_login.xml
@@ -43,6 +43,8 @@
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
             android:padding="12dp"
+            android:background="#5DADE2"
+            android:textColor="@android:color/white"
             android:text="Login"/>
 
         <TextView android:id="@+id/link_signup"
@@ -50,8 +52,11 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:text="No account yet? Create one"
+            android:textColor="@android:color/holo_red_dark"
             android:gravity="center"
-            android:textSize="16dip"/>
+            android:textSize="16dip"
+
+            android:clickable="true"/>
 
     </LinearLayout>
 </ScrollView>
