--- a/Application/Share&Ride/app/src/main/res/layout/activity_main.xml
+++ b/Application/Share&Ride/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
             android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:background="@drawable/bb"
-            android:text="SignIn"
+            android:text="SignUp"
             android:textColor="@android:color/white"
             android:textSize="20dp" />
 
