--- a/Application/Share&Ride/app/src/main/res/layout/activity_signin.xml
+++ b/Application/Share&Ride/app/src/main/res/layout/activity_signin.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:text="Sign Up"
-        android:textColor="#90c40909"
+        android:textColor="@android:color/holo_blue_light"
         android:textSize="33dp"
         android:textStyle="bold" />
 
@@ -49,7 +49,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:background="#b45705"
+        android:background="@android:color/holo_blue_light"
         android:text="Sign Up"
         android:textColor="#fff" />
 
