--- a/Application/Share&Ride/app/src/main/res/layout/content_members.xml
+++ b/Application/Share&Ride/app/src/main/res/layout/content_members.xml
@@ -22,43 +22,42 @@
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
-            android:layout_height="93dp"
-            android:text="Name"
+            android:layout_height="45dp"
+            android:text="Ashzarul haque Shafin"
             android:textAlignment="center"
-            android:textSize="40dp" />
+            android:textSize="35dp" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            android:text="1330834042"
+            android:textAlignment="center"
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            android:text="ashzarul.haque@northsouth.edu"
+            android:textAlignment="center"
+            android:textSize="20dp" />
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            android:text="01729683878"
+            android:textAlignment="center"
+            android:textSize="20dp" />
     </LinearLayout>
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="4.5"
+        android:layout_weight="4"
 
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/button1"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-
-            android:text="SignIn"
-            android:textColor="@android:color/white"
-            android:textSize="20dp"
-            android:background="#50363636"/>
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="10dp"
-            android:layout_weight="1"
-            android:background="@android:color/holo_blue_light"
-            android:text="Login"
-            android:textColor="@android:color/white"
-            android:textSize="20dp" />
     </LinearLayout>
 </LinearLayout>
