--- a/Application/Share&Ride/app/src/main/res/layout/activity_signin.xml
+++ b/Application/Share&Ride/app/src/main/res/layout/activity_signin.xml
@@ -46,6 +46,7 @@
 
 
     <Button
+        android:id="@+id/signup"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
