--- a/Application/Share&Ride/app/src/main/res/layout/content_members.xml
+++ b/Application/Share&Ride/app/src/main/res/layout/content_members.xml
@@ -36,7 +36,7 @@
             android:textSize="20dp" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="25dp"
             android:text="ashzarul.haque@northsouth.edu"
@@ -59,5 +59,11 @@
 
         android:orientation="horizontal">
 
+        <Button
+            android:id="@+id/logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Logout" />
     </LinearLayout>
 </LinearLayout>
