login with photo

--- a/Application/Share&Ride/app/src/main/res/layout/content_members.xml
+++ b/Application/Share&Ride/app/src/main/res/layout/content_members.xml
@@ -12,28 +12,39 @@
         android:orientation="vertical"
 
         android:layout_weight="1">
+
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/avatar"
-            android:layout_marginTop="90dp"/>
+            android:layout_height="300dp"
+            android:layout_marginTop="10dp"
+            app:srcCompat="@drawable/avatar" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:text="Ashzarul haque Shafin"
+            android:text="Welcome"
             android:textAlignment="center"
-            android:textSize="35dp" />
-
+            android:textSize="35dp"
+            android:textColor="@android:color/holo_blue_light"/>
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="25dp"
-            android:text="1330834042"
             android:textAlignment="center"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            android:hint="Enter your name"
+            android:textColorHint="@android:color/holo_orange_light"/>
+
+        <TextView
+            android:id="@+id/id"
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            android:textAlignment="center"
+            android:textSize="20dp"
+            android:hint="Enter your id"
+            android:textColorHint="@android:color/holo_orange_light"/>
 
         <TextView
             android:id="@+id/email"
@@ -42,13 +53,15 @@
             android:text="ashzarul.haque@northsouth.edu"
             android:textAlignment="center"
             android:textSize="20dp" />
+
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/phone"
             android:layout_width="match_parent"
             android:layout_height="25dp"
-            android:text="01729683878"
             android:textAlignment="center"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            android:hint="Enter your phone number"
+            android:textColorHint="@android:color/holo_orange_light"/>
     </LinearLayout>
 
 
@@ -64,6 +77,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Logout" />
+            android:text="Logout"
+            android:background="@android:color/holo_blue_light"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:textColor="@android:color/white"
+            android:textSize="30dp"/>
     </LinearLayout>
 </LinearLayout>
