--- a/Application/Share&Ride/app/src/main/res/layout/activity_faq.xml
+++ b/Application/Share&Ride/app/src/main/res/layout/activity_faq.xml
@@ -6,5 +6,11 @@
     android:orientation="vertical" >
 
 
+    <ListView
+        android:id="@+id/listViewArtists"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView1">
 
+    </ListView>
 </LinearLayout>
