--- a/Application/Share&Ride/app/src/main/res/layout/activity_chat.xml
+++ b/Application/Share&Ride/app/src/main/res/layout/activity_chat.xml
@@ -4,6 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="shafin.shareride.ChatActivity">
+    >
 
+
+    <LinearLayout
+        android:layout_width="368dp"
+        android:layout_height="495dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp"
+        android:weightSum="1"
+        tools:ignore="MissingConstraints">
+
+        <ListView
+            android:id="@+id/messages1"
+            android:layout_width="match_parent"
+            android:layout_height="276dp"
+            android:layout_weight="0.97" />
+
+
+
+        <EditText
+            android:id="@+id/message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="Message" />
+
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Send"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+
+            android:background="@android:color/holo_blue_light" />
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
