--- a/Application/Share&Ride/app/src/main/res/layout/content_members.xml
+++ b/Application/Share&Ride/app/src/main/res/layout/content_members.xml
@@ -10,78 +10,102 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-
-        android:layout_weight="1">
+        android:background="#10363636"
+        android:layout_weight=".20">
 
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_marginTop="10dp"
+            android:layout_height="match_parent"
             app:srcCompat="@drawable/avatar" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:text="Welcome"
-            android:textAlignment="center"
-            android:textSize="35dp"
-            android:textColor="@android:color/holo_blue_light"/>
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:textAlignment="center"
-            android:textSize="20dp"
-            android:hint="Enter your name"
-            android:textColorHint="@android:color/holo_orange_light"/>
-
-        <TextView
-            android:id="@+id/id"
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:textAlignment="center"
-            android:textSize="20dp"
-            android:hint="Enter your id"
-            android:textColorHint="@android:color/holo_orange_light"/>
-
-        <TextView
-            android:id="@+id/email"
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:text="ashzarul.haque@northsouth.edu"
-            android:textAlignment="center"
-            android:textSize="20dp" />
-
-        <TextView
-            android:id="@+id/phone"
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:textAlignment="center"
-            android:textSize="20dp"
-            android:hint="Enter your phone number"
-            android:textColorHint="@android:color/holo_orange_light"/>
     </LinearLayout>
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="4"
+        android:orientation="vertical"
+        android:layout_weight=".30">
 
-        android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Welcome "
+                android:textAlignment="center"
+                android:textSize="35dp"
+                android:textColor="@android:color/holo_blue_light"/>
+            <TextView
+                android:id="@+id/username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textSize="20dp"
+                android:hint="Enter your username"
+                android:textColorHint="@android:color/holo_orange_light"/>
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textSize="20dp"
+                android:hint="Enter your name"
+                android:textColorHint="@android:color/holo_orange_light"/>
+
+            <TextView
+                android:id="@+id/id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textSize="20dp"
+                android:hint="Enter your id"
+                android:textColorHint="@android:color/holo_orange_light"/>
+
+            <TextView
+                android:id="@+id/email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="email"
+                android:textAlignment="center"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textSize="20dp"
+                android:hint="Enter your phone number"
+                android:textColorHint="@android:color/holo_orange_light"/>
+
+
+
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight=".4"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <Button
             android:id="@+id/logout"
-            android:layout_width="wrap_content"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Logout"
-            android:background="@android:color/holo_blue_light"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            android:textColor="@android:color/white"
-            android:textSize="30dp"/>
+            android:gravity="center"
+            android:background="@drawable/logout"
+            android:layout_marginBottom="10dp"
+            />
     </LinearLayout>
+
 </LinearLayout>
+
+
+
+
+
