--- a/Application/Share&Ride/app/src/main/res/layout/activity_complain.xml
+++ b/Application/Share&Ride/app/src/main/res/layout/activity_complain.xml
@@ -24,7 +24,7 @@
             />
 
         <Button
-            android:id="@+id/feedbackbutton"
+            android:id="@+id/complainbutton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Send"
