--- a/Application/Share&Ride/app/src/main/res/layout/activity_tool.xml
+++ b/Application/Share&Ride/app/src/main/res/layout/activity_tool.xml
@@ -25,14 +25,21 @@
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
     <EditText
+        android:id="@+id/userName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter your Username"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp" />
+    <EditText
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Enter your name"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginTop="10dp"/>
     <EditText
         android:id="@+id/id"
         android:layout_width="match_parent"
@@ -40,8 +47,7 @@
         android:hint="Enter your id"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginTop="10dp"/>
     <EditText
         android:id="@+id/phone"
         android:layout_width="match_parent"
@@ -49,8 +55,7 @@
         android:hint="Enter your phone"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginTop="10dp"/>
 
     <Button
         android:id="@+id/save"
@@ -60,6 +65,8 @@
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
         android:layout_marginTop="20dp"
-        android:text=" Save Information" />
+        android:text=" Save Information"
+        android:background="@android:color/holo_blue_light"
+        android:textColor="@android:color/white"/>
 </LinearLayout>
 
