--- a/Application/Share&Ride/app/src/main/res/layout/content_members.xml
+++ b/Application/Share&Ride/app/src/main/res/layout/content_members.xml
@@ -41,9 +41,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:textSize="20dp"
+                android:textSize="30dp"
                 android:hint="Enter your username"
-                android:textColorHint="@android:color/holo_orange_light"/>
+                android:textColorHint="@android:color/holo_orange_light"
+                android:textColor="@android:color/holo_green_light" />
             <TextView
                 android:id="@+id/name"
                 android:layout_width="match_parent"
