--- a/Application/Share&Ride/app/src/main/res/layout/activity_complain.xml
+++ b/Application/Share&Ride/app/src/main/res/layout/activity_complain.xml
@@ -13,6 +13,13 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Drop your Complain."
+            android:textSize="30dp"
+            android:gravity="center"
+            android:textColor="@android:color/holo_green_light" />
         <EditText
             android:id="@+id/editText"
             android:layout_width="match_parent"
