--- a/Application/Share&Ride/app/src/main/res/layout/activity_chat.xml
+++ b/Application/Share&Ride/app/src/main/res/layout/activity_chat.xml
@@ -17,24 +17,21 @@
         android:text="name"
         android:layout_gravity="center"
         android:textSize="25dp"/>
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_weight="20"
-        android:layout_height="wrap_content"
-        android:id="@+id/scrollView">
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:id="@+id/layout1">
+            android:id="@+id/layout1"
+            android:layout_weight="1">
             <ListView
                 android:id="@+id/listview"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.97" />
+                android:layout_height="match_parent"
+                 />
         </LinearLayout>
-    </ScrollView>
+
 
     <include
         layout="@layout/message_area"
