--- a/Application/Share&Ride/app/src/main/res/layout/activity_chat.xml
+++ b/Application/Share&Ride/app/src/main/res/layout/activity_chat.xml
@@ -16,7 +16,8 @@
         android:id="@+id/chatname"
         android:text="name"
         android:layout_gravity="center"
-        android:textSize="25dp"/>
+        android:textSize="25dp"
+        android:textColor="@android:color/holo_blue_dark"/>
 
 
         <LinearLayout
@@ -29,6 +30,8 @@
                 android:id="@+id/listview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="20dp"
+                android:background="#FFF1CA"
                  />
         </LinearLayout>
 
