--- a/Application/Share&Ride/app/src/main/res/layout/activity_main.xml
+++ b/Application/Share&Ride/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
             android:layout_weight="1"
             android:background="@drawable/bb"
             android:text="SignUp"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/holo_green_light"
             android:textSize="20dp" />
 
         <Button
