--- a/Application/Share&Ride/app/src/main/res/layout/twolines.xml
+++ b/Application/Share&Ride/app/src/main/res/layout/twolines.xml
@@ -9,7 +9,8 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -23,6 +24,7 @@
             android:text="TextView"
             android:layout_marginTop="10dp"
             android:textSize="25dp"
+            android:textColor="@android:color/holo_blue_dark"
             />
 
         <TextView
@@ -30,7 +32,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView"
-            android:textSize="25dp" />
+            android:textSize="25dp"
+            android:textColor="@android:color/holo_blue_dark"/>
         <TextView
             android:id="@+id/line_c"
             android:layout_width="match_parent"
@@ -73,6 +76,8 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="60dp"
             android:id="@+id/addnow"
+            android:background="@android:color/holo_green_light"
+            android:textColor="@android:color/white"
             />
 
 
